--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: default
-title: Landing Page
-subTitle: A Template by Start Bootstrap
+title: ヘルスハックカンファレンス 2016/03/05-6 愛媛県松山市で開催
+subTitle: 健康とはコードの品質と同じように、誰かに与えてもらうのではなく自らの力で改善して手に入れるものなのだ。
 ---
