Modify for publishing.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: default
-title: ヘルスハックカンファレンス@MYJ 2016/03/05-6 愛媛県松山市で開催
-subTitle: 健康とはコードの品質と同じように、誰かに与えてもらうのではなく自らの力で改善して手に入れるものなのだ。
+title: ヘルスハックカンファレンス Vol.1 <br/>2016年3月5日〜6日<br/>愛媛県松山市で開催
+subTitle: “健康とは誰かに与えてもらうのではなく、自らの力で日々の改善により手に入れるものなのだ”
 ---
