--- a/thanks.html
+++ b/thanks.html
@@ -1,5 +1,5 @@
 ---
 layout: thanks
-title: ヘルスハックカンファレンス 最新情報受付完了
-subTitle: ありがとうございました！！
+title: ヘルスハックカンファレンス 最新情報受付登録完了
+subTitle: ご登録ありがとうございました。<br/>申し込み開始次第、登録メールアドレスにご連絡差し上げます。しばらくお待ちください。
 ---
