--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: default
-title: ヘルスハックカンファレンス Vol.1 <br/>2016年3月5日〜6日<br/>愛媛県松山市で開催
+title: ヘルスハックカンファレンス<br/>2016年3月5〜6日<br/>愛媛県松山市で開催
 subTitle: “健康とは誰かに与えてもらうのではなく、自らの力で日々の改善により手に入れるものなのだ”
 ---
