Modify for ogp and twitter card.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: default
 title: ヘルスハックカンファレンス<br/>2016年3月5〜6日<br/>愛媛県松山市で開催
-subTitle: “よい仕事・よい人生を送るために、一歩を踏み出し、健康をこの手でつかみとれ！！”
+subTitle: “よい仕事・よい人生を送るために、健康をこの手でつかみとるための、頭と身体と五感をフルに使う２日間”
 ---
