--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: default
-title: ヘルスハックカンファレンス<br/>2016年3月5〜6日<br/>愛媛県松山市で開催
-subTitle: “健康をこの手でつかみとるための、頭と身体と五感をフルに使う２日間”
+title: ヘルスハックカンファレンス <br/> 2016年3月5〜6日 <br/> 愛媛県松山市で開催
+subTitle: “なぜあなたは仕事のことばかり考えて、一番大事な自分の健康に目を向けないのか？”
 ---
